--- a/Client/my-app/package.json
+++ b/Client/my-app/package.json
@@ -12,7 +12,8 @@
     "lucide-react": "^0.441.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-media-recorder": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "^20",
