--- a/Client/my-app/package.json
+++ b/Client/my-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@huggingface/inference": "^2.8.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.13",
     "react": "^18",
